--- a/src/blocks/section/style.scss
+++ b/src/blocks/section/style.scss
@@ -480,7 +480,8 @@
 .dsgo-stack.alignfull.dsgo-no-width-constraint > .dsgo-stack__inner[class*="wp-container-"] {
 
 	// Target all direct children that aren't explicitly aligned
-	> :not(.alignleft):not(.alignright) {
+	// Exclude blocks with explicit max-width set via our extension
+	> :not(.alignleft):not(.alignright):not(.dsgo-has-max-width) {
 		max-width: none !important;
 		margin-left: 0 !important;
 		margin-right: 0 !important;
